--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon src/app.ts"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "dev": "nodemon src/app.ts",
+    "vercel-build": "tsc"
   },
   "keywords": [],
   "author": "",
