--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,13 @@
   "builds": [
     {
       "src": "src/app.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["./dist/**", "./node_modules/**"]
+      }
     }
   ],
   "routes": [
-    {
-      "src": "/api-docs",
-      "dest": "src/app.ts"
-    },
-    {
-      "src": "/api-docs/(.*)",
-      "dest": "src/app.ts"
-    },
     {
       "src": "/(.*)",
       "dest": "src/app.ts"
